# Twinkle

./: .gitignore  Cargo.toml  README.md  meson.build  meson.options  studio.planetpeanut.Twinkle.devel.yml  studio.planetpeanut.Twinkle.yml  twinkle.doap
.cargo/: config.toml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: flatpak.yml  integration.yml  tests.yml
data/: Twinkle.Autostart.desktop  meson.build  studio.planetpeanut.Twinkle.appdata.xml  studio.planetpeanut.Twinkle.desktop  studio.planetpeanut.Twinkle.metainfo.xml  studio.planetpeanut.Twinkle.yml
data/icons/: meson.build
info/: AUTHORS.txt  LICENSE.txt  RELEASE_NOTES.txt
scripts/: build-flatpak.sh  bump-git-version.sh  bump-openssh-version.sh  create-release.sh  meson-post-install.sh
src/: app.rs  cli.rs  config.rs  gui.rs  log.rs  main.rs
src/cli/: args.rs  checklist.rs  checklist_platform.rs  checklist_repository.rs  checklist_ssh.rs  checklist_sync.rs  clone.rs  init.rs  mod.rs  status.rs  sync.rs  util.rs
src/cli/check/: check.rs  check_config.rs  check_platform.rs  check_repository.rs  check_ssh.rs
src/cli/checklist/: check.rs  checklist.rs  checklist_config.rs  checklist_platform.rs  checklist_repository.rs  checklist_ssh.rs
src/git/: add.rs  branch.rs  checkout.rs  clone.rs  commit.rs  config.rs  fetch.rs  init.rs  lfs.rs  log.rs  ls_files.rs  ls_remote.rs  merge.rs  merge_base.rs  mod.rs  push.rs  rev_list.rs  rev_parse.rs  status.rs  symbolic_ref.rs  version.rs
src/git/objects/: change.rs  commit.rs  commit_message.rs  environment.rs  error.rs  file_status.rs  ignore_reason.rs  merge_status.rs  output.rs  reference.rs  repository.rs  user.rs
src/gtk/: lib.rs  mod.rs
src/gtk/resources/: main.ui
src/ssh/: keygen.rs  keyscan.rs  mod.rs  util.rs  version.rs
src/ssh/keys/: fingerprint.rs  host_key.rs  key_pair.rs  key_size.rs  key_type.rs  prelude.rs
src/ssh/keys/hosts/: bitbucket.rs  codeberg.rs  github.rs  gitlab.rs  gnome.rs  sourcehut.rs
src/ssh/keys/known_hosts/: devops.rs  gitee.rs  gitlab.rs  gnome.rs  kde.rs  launchpad.rs  prelude.rs  savannah.rs  sourceforge.rs
src/ssh/objects/: config.rs  url.rs
src/tests/: mod.rs
src/tests/git/: test_git_object_change.rs  test_git_object_commit_message.rs  test_git_object_environment.rs  test_git_object_file_status.rs  test_git_object_merge_status.rs  test_git_object_user.rs
src/tests/integration/: test_clone.sh  test_init.sh  test_sync.sh
src/tests/integration/common/: cleanup.sh  config.sh  install_keys.sh  test_synced.sh
src/tests/ssh/: test_ssh_keygen.rs  test_ssh_keyscan.rs  test_ssh_known_hosts.rs  test_ssh_object_hostkey.rs  test_ssh_object_keytype.rs  test_ssh_object_url.rs  test_ssh_version.rs
src/tests/twinkle/: test_twinkle_commit_message.rs  test_twinkle_config.rs  test_twinkle_default.rs  test_twinkle_default_dir_name.rs  test_twinkle_email_is_valid.rs  test_twinkle_init.rs  test_twinkle_object_repository.rs  test_twinkle_pretty_bool.rs  test_twinkle_pretty_commit_message.rs  test_twinkle_pretty_datetime.rs  test_twinkle_pretty_dir.rs  test_twinkle_resolve_paths.rs  test_twinkle_settings_url_for_host.rs  test_twinkle_sync.rs  test_twinkle_unique_dir.rs  test_twinkle_watch.rs
src/twinkle/: mod.rs  twinkle_clone.rs  twinkle_config.rs  twinkle_default.rs  twinkle_init.rs  twinkle_keys.rs  twinkle_lfs.rs  twinkle_notify.rs  twinkle_pretty.rs  twinkle_resolve.rs  twinkle_sync.rs  twinkle_util.rs  twinkle_watch.rs
src/twinkle/defaults/: common.rs  config.rs  hosts.rs  info.rs
src/twinkle/objects/: repository.rs  repository_config.rs  repository_files.rs  repository_notify.rs  twinkle_repository.rs
