[package]
name = "Twinkle"
version = "48.0.0"
repository = "https://www.github.com/hbons/Twinkle"
authors = ["Hylke Bons <hello@planetpeanut.studio>"]
license = "GNU General Public License v3 or later"
readme = "README.md"
edition = "2021"

[dependencies]
# From the Recommended Crate Directory – https://blessed.rs/
chrono = "0.4"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tokio = "1"
# From the GNOME Project – https://gnome.org/
# gtk4 = "0.9"
# libadwaita = "0.7"
# libsecret = "0.7"
# zbus = { version = "5", features = ["blocking"] }
# zvariant = "5"

[[bin]]
name = "twinkle"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
