[package]
name = "Twinkle"
version = "48.0.0"
repository = "https://www.github.com/hbons/Twinkle"
authors = ["Hylke Bons <hello@planetpeanut.studio>"]
license = "GNU General Public License v3 or later"
readme = "README.md"
edition = "2021"

[dependencies]
# From the Recommended Crate Directory – https://blessed.rs/
chrono = "0.4.42"
notify = "8.2.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
# tokio = "1.47.1"
# From the GNOME Project – https://gnome.org/
# gtk4 = "0.10.1"
# libadwaita = "0.8.0"
# libsecret = "0.7.0"
# zbus = { version = "5.11.0", features = ["blocking"] }
# zvariant = "5.7.0"

[[bin]]
name = "twinkle"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
