[package]
name = "Twinkle"
version = "50.0.0"
homepage = "https://planetpeanut.studio/twinkle"
repository = "https://www.github.com/hbons/Twinkle"
authors = ["Hylke Bons <hello@planetpeanut.studio>"]
license = "GNU General Public License v3 or later"
readme = "README.md"
edition = "2021"

[dependencies]
# From the Recommended Crate Directory – https://blessed.rs/
chrono = "0.4.42"
notify = "8.2.0"
sha2 = "0.11.0"
# tokio = "1.47.1"
# From the GNOME Project – https://gnome.org/
# gtk4 = { version = "0.10.1", optional = true }
# libadwaita = { version = "0.8.0", optional = true }
# libsecret = { version = "0.8.0", optional = true }
# zbus = { version = "5.11.0", features = ["blocking"], optional = true }
# zvariant = { version = "5.7.0", optional = true }

[features]
default = []
gnome = [  # TODO
    # "dep:gtk4",
    # "dep:libadwaita",
    # "dep:libsecret",
    # "dep:zbus",
    # "dep:zvariant",
]

[[bin]]
name = "twinkle"  # TODO: sparkleshare
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
