# apps_dir = join_paths(get_option('prefix'), 'share', 'applications')

# if get_option('nightly')
#   install_data(
#     sources: 'studio.planetpeanut.Twinkle.Nightly.desktop',
#     install_dir: apps_dir,
#     rename: 'studio.planetpeanut.Twinkle.desktop'
#   )
# else
#   install_data(
#     sources: 'studio.planetpeanut.Twinkle.desktop',
#     install_dir: apps_dir
#   )
# endif

# install_data(
#   sources: 'Twinkle.Autostart.desktop',
#   install_dir: apps_dir
# )

# install_data(
#   sources: 'studio.planetpeanut.Twinkle.appdata.xml',
#   install_dir: join_paths(get_option('prefix'), 'share', 'metainfo')
# )
